# Algorithms-for-DS-and-ML

./: README.md  tests.ipynb
DSAlgorithms/: CMakeLists.txt  compile_commands.json  libDSAlgorithms.so.1.0.1  main.py
DSAlgorithms/src/: DSAlgorithms.cpp  DSAlgorithms.h  auxFunctions.cpp  auxFunctions.h  basicsStatistics.cpp  basicsStatistics.h  clustering.cpp  clustering.h  dimensionalReduction.cpp  dimensionalReduction.h  linalg.cpp  linalg.h  mytestlib.cpp  mytestlib.h  mytestlib_2.cpp  mytestlib_2.h
DSAlgorithms/test/: CMakeLists.txt  main.cpp
DSAlgorithms/test/src/: auxFunctions.cpp  auxFunctions.h  tests.cpp  tests.h
tests_python/: clustering.ipynb  dimensional_reduction.ipynb  test_tSNE.py
tests_python/Datasets/: mnist500_labels.txt
